# otclientv8

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  init.lua  makefile  premake5.lua  readme.md  vcpkg.json
.github/: .releaserc  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/renovate/: auto-merge.json
.github/workflows/: build-macos.yaml  build-release.yaml  build-ubuntu.yaml  build-windows.yaml  code-quality.yaml  code-tests.yaml  commit-lint.yaml  release.yaml  semantic-release.yaml
cmake/: compiler.cmake  dependencies.cmake  options.cmake  toolchain.cmake
data/styles/: 40-container.otui
docs/: compiling.md
modules/game_console/: console.lua
modules/game_containers/: container_loot_category.otui  containers.lua  containers.otui
modules/game_interface/: auto_loot_window.otui  gameinterface.lua  interface.otmod
modules/game_prey/: prey.otui
modules/game_store/: store.lua
modules/game_tasks/: tasks.lua  tasks.otmod  tasks_tracker.otui
modules/game_topbar/: topbar.otui
src/: main.cpp
src/client/: CMakeLists.txt  container.cpp  container.h  game.cpp  game.h  localplayer.cpp  localplayer.h  outfit.cpp  protocolgameparse.cpp  protocolgamesend.cpp
src/framework/: CMakeLists.txt
src/framework/cmake/: FindLibZip.cmake
src/framework/core/: consoleapplication.h  resourcemanager.cpp  resourcemanager.h
src/framework/luaengine/: luainterface.h  luavaluecasts.h
src/framework/platform/: platformwindow.cpp  win32platform.cpp
src/framework/util/: crypt.cpp  crypt.h
